manifests/deployment-2.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "qubecluster-72f6"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "qubecluster-72f6"
  template:
    metadata:
      labels:
        app: "qubecluster-72f6"
    spec:
      containers:
        - name: "qubecluster-72f6"
          image: "quberepo.azurecr.io/qubecluster"
          ports:
          - containerPort: 5000
