manifests/service-1.yml
apiVersion: v1
kind: Service
metadata:
    name: "qubeaks-961b"
    labels:
        app: "qubeaks-961b"
spec:
    type: ClusterIP
    ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
    selector:
        app: "qubeaks-961b"
