manifests/service-2.yml
apiVersion: v1
kind: Service
metadata:
    name: "qubecluster-72f6"
    labels:
        app: "qubecluster-72f6"
spec:
    type: LoadBalancer
    ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
    selector:
        app: "qubecluster-72f6"
