manifests/service-3.yml
apiVersion: v1
kind: Service
metadata:
    name: "qubecluster-b266"
    labels:
        app: "qubecluster-b266"
spec:
    type: LoadBalancer
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "qubecluster-b266"
